--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,10 @@
-name: Schedule (Multi Event)
-on: 
-  schedule:
-    - cron: '*/2 * * * *'
-  issues:
-    branches: 
-      - workflow-test-branch
-  push:
-    branches:
-      - gh-pages
-jobs: 
-  hello_world: 
+name: Contexts
+on: push
+jobs:
+  MY-CONTEXT:
     runs-on: ubuntu-latest
     steps:
-      - name: Echo Current Time
-        run: echo "THE CURRENT SERVER TIME OF THE SERVER $(hostname) is $(date)"
-  
+      env:
+        MY_ACTIONS: ${{ github.action }}
+      - name: "STEP"
+        run: echo "$MY_ACTIONS"
